--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.4",
     "clsx": "^2.1.1",
+    "gl-matrix": "^3.4.3",
     "gsap": "^3.13.0",
     "motion": "^12.19.2",
     "next": "15.3.4",
