--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.4",
+    "@tabler/icons-react": "^3.34.0",
     "clsx": "^2.1.1",
     "gl-matrix": "^3.4.3",
     "gsap": "^3.13.0",
-    "motion": "^12.19.2",
+    "motion": "^12.20.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
